<resources>
    <string name="app_name">Água para Todos</string>

    <string name="tela_ao_redor">Ao meu Redor</string>

    <string name="facebook_app_id">886882718059406</string>

    <string name="action_settings">Configurações</string>

    <string name="search_title">Procurar</string>

    <string name="aguarde">Aguarde&#8230;</string>
    <string name="msgErroWS">Ocorreu algum erro. Por favor aguarde alguns instantes.</string>

    <string name="msgSim">Sim</string>
    <string name="msgNao">Não</string>

    <string name="msgCampoNaoInformado">Campo não informado</string>
    <string name="statusAtualizadoSucesso">Status atualizado com sucesso!</string>

    <string name="msgEntendi">Entendi, continuar</string>
    <string name="msgBtnNovaOcorrencia">Aqui você pode cadastrar uma nova ocorrência informando da água parada, ou do risco de foco de dengue.</string>
    <string name="msgBottom">Aqui você confere nossas outras funcionalidades.</string>

    <string name="gpsDesativado">GPS está desativado.</string>
    <string name="ativar">Ativar</string>

    <!-- URLS WEBSERVICES -->
    <string name="usuario_login">usuario/login</string>
    <string name="usuario_login_nativo">usuario/loginNativo</string>
    <string name="usuario_verificar_codigo">usuario/verificarCodigo</string>
    <string name="usuario_receber_notificacao">usuario/receberNotificacao</string>
    <string name="usuario_atualizar_cidade">usuario/atualizarCidade</string>
    <string name="usuario_atualizar_gcm">usuario/atualizarGcm</string>
    <string name="usuario_esqueci_senha">usuario/esqueciSenha</string>
    <string name="usuario_alterar_senha">usuario/resetarSenha</string>
    <string name="ocorrencia_nova">ocorrencia/nova</string>
    <string name="ocorrencia_listar">ocorrencia/listar</string>
    <string name="ocorrencia_buscar_id">ocorrencia/buscarPorId</string>
    <string name="ocorrencia_confirmar">ocorrencia/confirmar</string>
    <string name="ocorrencia_solucionada">ocorrencia/solucionada</string>

    <!-- TELA DE LOGIN -->
    <string name="bundle_nome_usuario">nome_usuario</string>
    <string name="bundle_email_usuario">email_usuario</string>
    <string name="bundle_foto_usuario">foto_usuario</string>
    <string name="login_facebook_cancelado">Login com Facebook cancelado.</string>
    <string name="login_facebook_erro">Ocorreu um erro ao logar com o Facebook.</string>
    <string name="login_erro">Ocorreu algum erro. Por favor tente novamente mais tarde.</string>
    <string name="criar_conta">Criar Conta</string>

    <!-- MENU DRAWER -->
    <string name="menu_mapa">Mapa</string>
    <string name="menu_registrar_ocorrencia">Registrar ocorrência</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_notificacao">Notificação</string>

    <!-- TELA REGISTRAR OCORRENCIA -->
    <string name="tituloTelaRegistrarOcorrenia">Registrar Ocorrência</string>

    <string name="msgCadastrandoOcorrencia">Cadastrando ocorrência&#8230;</string>
    <string name="msgSucessoEnviarOcorrencia">Ocorrência cadastrada com sucesso.</string>
    <string name="msgErroEnviarOcorrencia">Ocorreu um erro ao cadastrar a ocorrência.</string>
    <string name="txtTituloOcorrencia">Título</string>
    <string name="txtTituloOcorrencia2">Ocorrência</string>
    <string name="edTituloOcorrencia">Informe um título.</string>
    <string name="txtObservacaoOcorrencia">Observação</string>
    <string name="edObservacaoOcorrencia">Descreva a ocorrência.</string>
    <string name="txtEnderecoOcorrencia">Endereço</string>
    <string name="btnCadastrarOcorrencia">Cadastrar</string>
    <string name="txtPontoReferenciaOcorrencia">Ponto de referência</string>
    <string name="edPontoReferenciaOcorrencia">Cite um ponto de referência.</string>

    <string name="erroInformarTituloOcorrencia">Por favor informe um título.</string>
    <string name="erroInformarEnderecoOcorrencia">Por favor informe um endereço.</string>
    <string name="erroBuscarEndereco">Ocorreu algum erro ao buscar o endereço, por favor tente novamente.</string>

    <string name="msgCaracteresRestantes">caractere(s) restante(s).</string>

    <string name="limparCampos">Limpar campos</string>

    <string name="confirmarDados">Confirmar dados</string>
    <string name="infoDadosVeridicos">Os dados são verídicos e podem ser utilizados pelas autoridades responsáveis para tomarem as medidas cabíveis?</string>

    <string name="rbInformarEndereco">Utilizar endereço acima</string>
    <string name="rbUtilizarGps">Utilizar minha posição atual (GPS)</string>
    <string name="msgAtivarGps">Por favor ative o GPS para usar esta funcionalidade.</string>

    <!-- Tela Detalhe da Ocorrencia -->
    <string name="tituloTelaDetalheOcorrenia">Detalhes da Ocorrência</string>
    <string name="dialogTituloConfirmar">Confirmar Ocorrência</string>
    <string name="dialogTextoConfirmar">Esta ocorrência realmente é verdadeira?</string>
    <string name="msgSucessoConfirmar">Ocorrência confirmada com sucesso.</string>
    <string name="msgErroConfirmarProibido">Você já confirmou esta ocorrência.</string>
    <string name="msgPessoasConfirmaramOcorrenciaSingular">pessoa confirmou esta ocorrência.</string>
    <string name="msgPessoasConfirmaramOcorrenciaPlural">pessoas confirmaram esta ocorrência.</string>
    <string name="msgStatusOcorrenciaSolucionada">Status: Solucionada</string>
    <string name="msgStatusOcorrenciaAguardando">Status: Aguardando solução</string>
    <string name="msgSolucionarOcorrenciaForaCidade">Algo estranho está ocorrendo. Você tentou marcar uma ocorrência fora da sua cidade como solucionada.</string>
    <string name="msgConfirmarOcorrenciaForaCidade">Algo estranho está ocorrendo. Você tentou confirmar uma ocorrência fora da sua cidade como verdadeira.</string>


    <!-- Tela Lista de Ocorrencias -->
    <string name="tituloListaOcorrencias">Lista de Ocorrências</string>

    <!-- Tela de Confirmar Cidade -->
    <string name="msgTxtConfirmarCidade">Por favor confirme sua cidade de residência no campo abaixo.</string>
    <string name="msgErroInformarCidade">Por favor informe sua cidade.</string>
    <string name="msgCidadeDigiteAqui">Cidade</string>
    <string name="erroBuscarCidade">Por favor informe uma cidade válida.</string>
    <string name="txtDataDeCadastro">Data de cadastro:</string>

    <!-- Informações Fragment -->
    <string name="tela_informacoes">Informações</string>
    <string name="title_activity_criar_conta">Criar Conta</string>
    <string name="title_activity_confirmar_codigo_login">Confirmação</string>

    <!-- Tela Minha Pontuacao -->
    <string name="tela_minha_pontuacao">Pontuação</string>
    <string name="title_activity_esqueci_senha">Esqueci minha senha</string>

</resources>
