<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarOcorrencia">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_top" />

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtTituloOcorrencia"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/editTextTituloOcorrencia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitulo"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:hint="@string/edTituloOcorrencia" />

    <TextView
        android:id="@+id/textViewDescricao"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTituloOcorrencia"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtObservacaoOcorrencia"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/editTextDescricaoOcorrencia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDescricao"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:hint="@string/edObservacaoOcorrencia"
        android:inputType="textMultiLine"
        android:lines="3" />

    <TextView
        android:id="@+id/textViewEndereco"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDescricaoOcorrencia"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtEnderecoOcorrencia"
        android:textSize="12dp" />

    <AutoCompleteTextView
        android:id="@+id/editTextEnderecoOcorrencia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewEndereco"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"></AutoCompleteTextView>

    <TextView
        android:id="@+id/textViewPontoReferencia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEnderecoOcorrencia"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtPontoReferenciaOcorrencia"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/editTextPontoReferenciaOcorrencia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewPontoReferencia"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:hint="@string/edPontoReferenciaOcorrencia"
        android:inputType="textMultiLine"
        android:lines="2" />

    <Button
        android:id="@+id/btnEnviarOcorrencia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPontoReferenciaOcorrencia"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:text="@string/btnCadastrarOcorrencia"
        android:textColor="@android:color/white" />

</RelativeLayout>

